# DNA-Diffusion

./: .all-contributorsrc  .editorconfig  .envrc  .example.env  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  Contributors.md  Described_Classifier_Free_Enhancer_UNET_bitdiffusion.ipynb  LICENSE.md  Makefile  README.md  devshell  dnadiffusion.py  enformer_inference.ipynb  environment.yaml  flake.nix  mkdocs.yml  pyproject.toml  requirements.txt  sample.py  sample_hf.py  setup.py  test_environment.py  train.py  train_hf.py  train_lightning.py
.argo/: build.yaml
.devcontainer/: devcontainer.Dockerfile  devcontainer.json
.flyte/: config-browser.yaml  config-local.yaml  config-template.yaml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  codecov.yml  labels.yml  mergify.yml  renovate.json
.github/actions/setup_environment/: action.yml
.github/deprecated/: docker.yml  release.yml  test-release.yml
.github/workflows/: CD.yml  CI.yaml  build-images.yaml  build.yml  ci.yml  constraints.txt  docker.yml  docs.yml  documentation.yml  inactive-issues-prs.yml  inactivity.yml  labeler.yml  release.yml  test-release.yml
codebase/src/data/: sequence_dataloader.py
configs/: sample.yaml  sample_hf.yaml  train.yaml  train_debug.yaml
configs/data/: debug.yaml  default.yaml  gm12878.yaml  hepg2.yaml  k562.yaml  sampling.yaml
configs/diffusion/: default.yaml
configs/model/: unet.yaml  unet_pretrained.yaml
configs/optimizer/: adam.yaml
configs/sampling/: default.yaml  default_hf.yaml
configs/training/: debug.yaml  default.yaml
containerfiles/: conda.Dockerfile  gpu.Dockerfile  pkg.Dockerfile
containers/: conda-manual.Dockerfile  conda.Dockerfile  gpu.Dockerfile  pkg.Dockerfile
data/: HepG2_ENCLB029COU.txt  K562_ENCLB843GMH.txt
diffusion/: train.py
diffusion/data/: README.md  create_motifs.py  dataloader.py  install_and_download.sh  onehot.py
diffusion/models/: attention.py  bit_diffusion.py  bits.py  conv.py  embedding.py  norm.py  residual.py  unet.py  utils.py
dna-diffusion/: README.md  requirements.yml  sample.py  trainer.py
dna-diffusion/data/: README.md  dataloader.py
dna-diffusion/losses/: README.md
dna-diffusion/metrics/: README.md  k_mer_based_metric.py  metrics.py
dna-diffusion/models/: README.md  diffusion.py  networks.py
dna-diffusion/utils/: ema.py  utils.py
dnadiffusion/: README.md  configs.py  sample.py  trainer.py  trainer_fabric.py
dnadiffusion/callbacks/: ema.py  sampling.py
dnadiffusion/data/: dataloader.py
dnadiffusion/metrics/: README.md  metrics.py
dnadiffusion/models/: diffusion.py  modules.py  networks.py
dockerfiles/: Dockerfile
docs/: contributors.md  specification.md
docs/reference/: dnadiffusion.md
environments/cluster/: .env  README.md  create_conda.sh  dnadiffusion_run.sh  install_mambaforge.sh  slurm_interactive.sh  test_path.sh
environments/conda/: conda-linux-64.lock.yml  conda-lock.yml  environment.yml  virtual-packages.yml
models/vanilla_diffusion/: Code_to_refactor_UNET_ANNOTATED.ipynb  README.MD  dataloader.py  sequence_dataloader.py
models/vanilla_diffusion/archived_versions/: Code_to_refactor_UNET_ANNOTATED_v1.ipynb  Readme.md
notebooks/: Classifier_Free_Enhancer_UNET_bitdiffusion.ipynb  README.md  dnadiffusion.py  filter_master.ipynb  marimo_master_dataset_and_filter.ipynb  marimo_master_dataset_and_filter.py  master_dataset.ipynb  master_dataset_and_filter.py  new_data_training_and_sequence_generation.ipynb  sample.ipynb  sequence_generation.ipynb  train_sample.ipynb  training_and_sequence_generation.ipynb
notebooks/experiments/: README.md  chrombpnet-heatmap.ipynb  dna-diffusion-chrombpnet.ipynb
notebooks/experiments/benchmark/: DNA_diffusion_GAN_benchmark.ipynb
notebooks/experiments/conditional_diffusion/: VQ_VAE_LATENT_SPACE_WITH_METRICS.ipynb  dna_diff_baseline_conditional_UNET.ipynb  dna_diff_baseline_conditional_UNET_with_time_warping.ipynb  hypernet_conditioning.ipynb  time_warping_dna_diff_baseline_conditional_UNET.ipynb  utils.py
notebooks/refactoring/: README.md  util_and_computation_functions_to_be_written_into_metrics_py.ipynb
notebooks/tutorials/: README.md  tutorials.md
scripts/: flake
src/: README.md  config.py  main.py  train.py
src/configs/: main.yaml  template_config.yaml  train.yaml
src/configs/callbacks/: default.yaml
src/configs/data/: sequence.yaml  vanilla_sequences.yaml
src/configs/dataset/: sequence.yaml
src/configs/logger/: wandb.yaml
src/configs/model/: dnaddpmdiffusion.yaml  dnadiffusion.yaml  unet_conditional.yaml
src/configs/paths/: default.yaml
src/configs/trainer/: ddp.yaml
src/data/: sequence_dataloader.py  sequence_datamodule.py
src/dnadiffusion/: __about__.py  __init__.py  __main__.py  configs.py  configuration.py  constants.py  logging.py  sample.py  trainer.py
src/dnadiffusion/callbacks/: ema.py  sampling.py
src/dnadiffusion/cli/: __init__.py
src/dnadiffusion/data/: README.md  dataloader.py  model4cells_train_split_3_50_dims.pkl  preprocessing.py  validation_preprocessing.py
src/dnadiffusion/hydra/: __init__.py  execute.py  execution_config.py  execution_utils.py
src/dnadiffusion/metrics/: metrics.py  motif_composition.py  sampling_metrics.py  validation_metrics.py
src/dnadiffusion/models/: diffusion.py  layers.py  modules.py  networks.py  pretrained_unet.py  training_modules.py  unet.py
src/dnadiffusion/utils/: data_util.py  ema.py  sample_util.py  scheduler.py  train_util.py  utils.py
src/dnadiffusion/workflows/: example.py  lrwine.py
src/models/diffusion/: ddim.py  ddpm.py  diffusion.py
src/models/networks/: unet_bitdiffusion.py  unet_lucas.py  unet_lucas_cond.py
src/refactor/: README.md  config.py  main.py
src/utils/: ema.py  metrics.py  misc.py  network.py  schedules.py
tests/: conftest.py  test_add.py  test_data_util.py  test_dataloader.py  test_main.py  test_metrics.py  test_motif_composition.py  test_preprocessing.py  test_sample_util.py  test_train.py  test_utils.py  test_validation_preprocessing.py
tests/data/: test_sequence_dataloader.py
(+168 files in other folders)
