[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "dnadiffusion"
authors = [{ name = "dnadiffusion", email = "dnadiffusion@pinellolab.org" }]
description = "Library for generation of synthetic regulatory elements using diffusion models"
readme = "README.md"
dynamic = ["version"]
classifiers = ["Programming Language :: Python :: 3 :: Only"]
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.1",
    "memory-efficient-attention-pytorch>=0.1.6",
    "pandas>=2.2.3",
    "safetensors>=0.5.3",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.9",
]

[project.scripts]
dnadiffusion = "dnadiffusion.cli:main"

[project.urls]
Documentation = "https://pinellolab.github.io/DNA-Diffusion"
Source = "https://github.com/pinellolab/DNA-Diffusion"

[tool.ruff]
target-version = "py312"
line-length = 120
extend-include = ["*.ipynb"]
lint.select = ["E", "F", "I"]
lint.ignore = ["E721", "E731", "E741", "E742", "E743"]
exclude = ["src/refactor"]

[tool.ruff.lint.isort]
known-first-party = ["dnadiffusion"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.pytest.ini_options]
# addopts = "--cov=src/dnadiffusion/ --cov-report=term-missing --ignore=src/refactor"
testpaths = ["tests"]
asyncio_mode = "strict"

# [tool.coverage.run]
# source_pkgs = ["dnadiffusion", "tests"]
# branch = true
# parallel = true
# omit = [
#     "src/dnadiffusion/__about__.py",
#     "src/dnadiffusion/__main__.py",
#     "tests/conftest.py",
# ]
#
# [tool.coverage.paths]
# dnadiffusion = ["src/dnadiffusion", "*/dnadiffusion/src/dnadiffusion"]
# tests = ["tests", "*/dnadiffusion/tests"]

# [tool.coverage.report]
# exclude_lines = ["no cov", "if **name** == .__main__.:", "if TYPE_CHECKING:"]

[tool.hatch.version]
path = "src/dnadiffusion/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ['src/dnadiffusion']

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
    "mkdocs-material>=9.6.12",
    "mkdocstrings[python]>=0.29.1",
    "pytest-asyncio>=0.26.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
